--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,13 @@ apply plugin: 'com.neenbedankt.android-apt'
 
 def AAVersion = '4.+'
 
+apt {
+    arguments {
+        androidManifestFile variant.outputs[0]?.processResources?.manifestFile
+        resourcePackageName android.defaultConfig.applicationId
+    }
+}
+
 android {
     compileSdkVersion 23
     buildToolsVersion "23.0.2"
@@ -29,8 +36,11 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:design:23.1.1'
 
-    compile 'com.google.dagger:dagger:2.0.+'
-    apt "com.google.dagger:dagger-compiler:2.0.+"
+    provided 'org.glassfish:javax.annotation:10.0-b28'
+
+    compile 'com.google.dagger:dagger:2.0.2'
+    provided 'com.google.dagger:dagger-compiler:2.0.2'
+    apt "com.google.dagger:dagger:2.0.2"
 
     apt "org.androidannotations:androidannotations:$AAVersion"
     compile "org.androidannotations:androidannotations-api:$AAVersion"
