--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,18 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    packagingOptions {
+        exclude 'META-INF/notice.txt'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/license.txt'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/NOTICE.txt'
+        exclude 'META-INF/notice.txt'
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/DEPENDENCIES.txt'
+        exclude 'LICENSE.txt'
+    }
 }
 
 dependencies {
@@ -49,4 +61,13 @@ dependencies {
     compile "org.androidannotations:rest-spring-api:$AAVersion"
 
     testApt "org.androidannotations:androidannotations:$AAVersion"
+
+    compile 'com.fasterxml.jackson.core:jackson-core:2.5.+'
+    compile 'com.fasterxml.jackson.core:jackson-annotations:2.5.+'
+    compile 'com.fasterxml.jackson.core:jackson-databind:2.5.+'
+
+    compile 'org.springframework.android:spring-android-rest-template:2.0.0.M2'
+
+    compile 'com.octo.android.robospice:robospice:1.4.14'
+    compile 'com.octo.android.robospice:robospice-spring-android:1.4.14'
 }
