--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
 
     <!-- To auto-complete the email text field in the login form with the user's emails -->
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application
         android:name=".GithubClientApplication"
@@ -26,6 +28,8 @@
             android:name=".activities.LoginActivity_"
             android:label="@string/title_activity_login">
         </activity>
+
+        <service android:name=".services.AuthSpiceService" android:exported="false" />
     </application>
 
 </manifest>
