--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.neenbedankt.android-apt'
+apply plugin: 'realm-android'
 
 def AAVersion = '4.+'
 
@@ -39,18 +40,17 @@ android {
         exclude 'META-INF/DEPENDENCIES.txt'
         exclude 'LICENSE.txt'
     }
+    lintOptions {
+        abortOnError false
+    }
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
 
-    compile 'com.android.support:appcompat-v7:23.1.1'
-    compile 'com.android.support:design:23.1.1'
-
     provided 'org.glassfish:javax.annotation:10.0-b28'
 
-    compile 'com.google.dagger:dagger:2.0.2'
     provided 'com.google.dagger:dagger-compiler:2.0.2'
     apt "com.google.dagger:dagger:2.0.2"
 
@@ -62,14 +62,16 @@ dependencies {
 
     testApt "org.androidannotations:androidannotations:$AAVersion"
 
+    compile 'com.android.support:appcompat-v7:23.1.1'
+    compile 'com.android.support:design:23.1.1'
+    compile 'com.google.dagger:dagger:2.0.2'
     compile 'com.fasterxml.jackson.core:jackson-core:2.5.+'
     compile 'com.fasterxml.jackson.core:jackson-annotations:2.5.+'
     compile 'com.fasterxml.jackson.core:jackson-databind:2.5.+'
-
     compile 'org.springframework.android:spring-android-rest-template:2.0.0.M2'
-
     compile 'com.octo.android.robospice:robospice:1.4.14'
     compile 'com.octo.android.robospice:robospice-spring-android:1.4.14'
-
     compile 'com.google.guava:guava:18.0'
+    compile 'com.android.support:support-v4:23.1.1'
+    compile 'com.android.support:recyclerview-v7:23.1.1'
 }
