--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <!-- To auto-complete the email text field in the login form with the user's emails -->
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.WAKE_LOCK"/>
 
     <application
         android:name=".GithubClientApplication"
@@ -29,9 +29,14 @@
             android:label="@string/title_activity_login">
         </activity>
 
-        <service android:name=".services.AuthSpiceService" android:exported="false" />
+        <service
+            android:name=".services.AuthSpiceService"
+            android:exported="false"/>
+        <service
+            android:name=".services.ReposSpiceService"
+            android:exported="false"/>
 
-        <service android:name=".services.ReposSpiceService" android:exported="false" />
+        <activity android:name=".activities.RepoDetailActivity_"/>
     </application>
 
 </manifest>
