--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,4 +75,6 @@ dependencies {
     compile 'com.android.support:support-v4:23.1.1'
     compile 'com.android.support:recyclerview-v7:23.1.1'
     compile 'com.android.support:cardview-v7:23.0.+'
+
+    compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
 }
