Add some TODO and library for number icons

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,4 +77,6 @@ dependencies {
     compile 'com.android.support:cardview-v7:23.0.+'
 
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
+
+    compile 'com.github.akashandroid90:imageletter:1.2'
 }
