--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,6 +36,10 @@
             android:name=".services.ReposSpiceService"
             android:exported="false"/>
 
+        <service
+            android:name=".services.CommitsSpiceService"
+            android:exported="false"/>
+
         <activity android:name=".activities.RepoDetailActivity_"/>
     </application>
 
