--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,8 +62,8 @@ dependencies {
 
     testApt "org.androidannotations:androidannotations:$AAVersion"
 
-    compile 'com.android.support:appcompat-v7:23.1.1'
-    compile 'com.android.support:design:23.1.1'
+    compile 'com.android.support:appcompat-v7:23.2.1'
+    compile 'com.android.support:design:23.2.1'
     compile 'com.google.dagger:dagger:2.0.2'
     compile 'com.fasterxml.jackson.core:jackson-core:2.5.+'
     compile 'com.fasterxml.jackson.core:jackson-annotations:2.5.+'
@@ -79,4 +79,6 @@ dependencies {
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
 
     compile 'com.github.akashandroid90:imageletter:1.2'
+
+    compile 'com.roughike:bottom-bar:1.3.2'
 }
